--- a/azdo-pbi-analyzer/src/AzDoPbiAnalyzer.Cli/AzDoPbiAnalyzer.Cli.csproj
+++ b/azdo-pbi-analyzer/src/AzDoPbiAnalyzer.Cli/AzDoPbiAnalyzer.Cli.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotenv.net" Version="4.0.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
