--- a/azdo-pbi-analyzer-extension/package.json
+++ b/azdo-pbi-analyzer-extension/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "azdo-pbi-analyzer-extension",
+    "name": "azdo-pbi-analyzer",
     "displayName": "Azure DevOps PBI Analyzer",
-    "description": "Scaffold AI agents, workflows, and templates for Azure DevOps PBI analysis and test automation.",
-    "version": "1.1.0",
+    "description": "Analyze Azure DevOps items and generate Gherkin/Cypress tests.",
+    "version": "1.0.0",
     "publisher": "RUNTechnologyConsultingServicesLLC",
     "repository": {
         "type": "git",
         "url": "https://github.com/veeresh-bikkaneti/azdo-ai-toolkit"
     },
-    "bugs": {
-        "url": "https://github.com/veeresh-bikkaneti/azdo-ai-toolkit/issues"
-    },
-    "homepage": "https://github.com/veeresh-bikkaneti/azdo-ai-toolkit#readme",
     "engines": {
         "vscode": "^1.80.0"
     },
     "categories": [
         "Other"
     ],
+    "activationEvents": [],
     "main": "./dist/extension.js",
     "contributes": {
         "commands": [
             {
-                "command": "aiInitiative.scaffold",
-                "title": "AI Initiative: Initialize Docs"
+                "command": "pbiAnalyzer.analyze",
+                "title": "AzDO Analyzer: Analyze PBI"
+            },
+            {
+                "command": "pbiAnalyzer.setPat",
+                "title": "AzDO Analyzer: Set PAT"
             }
         ]
     },
