--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ Thumbs.db
 .agent/traces/
 .agent/memory/
 # Keep the main .agent configuration, but ignore runtime/temp data if any
+improve shopping prompt/COMET-SHORTCUTS-V6.md
+improve shopping prompt/DEPLOYMENT-GUIDE.md
+improve shopping prompt/EXPERT-SHOPPING-ASSISTANT-V6.0.md
+improve shopping prompt/START-HERE.md
+improve shopping prompt/V6-EXAMPLE-DIY.md
+improve shopping prompt/V6-EXAMPLE-FITNESS.md
+improve shopping prompt/V6-IMPLEMENTATION-PLAN.md
