chore: add .vsix files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ improve shopping prompt/START-HERE.md
 improve shopping prompt/V6-EXAMPLE-DIY.md
 improve shopping prompt/V6-EXAMPLE-FITNESS.md
 improve shopping prompt/V6-IMPLEMENTATION-PLAN.md
+*.vsix
